# TradeFlowGCN

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  experimental_full_models.yaml  gcn_config_upd.yaml
notebooks/: 01_data_exploration.ipynb  02_model_evaluation.ipynb  README.md
scripts/: download_data.py  evaluate_models.py  explore_data.py  generate_embeddings.py  train.py
scripts/experiments/: benchmark_models_to_csv.py  sweep_tabular_baselines.py  train_models_separately.py
src/trade_flow_gcn/: __init__.py
src/trade_flow_gcn/data/: __init__.py  dataset.py  download.py  preprocess_exp.py  preprocessing.py
src/trade_flow_gcn/evaluation/: __init__.py  metrics.py
src/trade_flow_gcn/models/: ARCHITECTURE_CHANGES_REPORT.md  __init__.py  egnn.py  gae.py  gat.py  gcn.py  gravity_baseline.py  hybrid_gae_xgboost.py  lightgbm_baseline.py  mlp_baseline.py  rgcn.py  xgboost_baseline.py
src/trade_flow_gcn/training/: __init__.py  lightning_module.py
src/trade_flow_gcn/utils/: __init__.py  config.py
tests/: test_smoke.py
