[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-flow-gcn"
version = "0.1.0"
description = "TradeFlowGNN: Forecasting Bilateral Trade with Graph Neural Networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TradeFlowGNN Team"},
]

dependencies = [
    # Core ML
    "torch>=2.0",
    "torch-geometric>=2.4",
    "pytorch-lightning>=2.0",

    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "requests>=2.31",
    "openpyxl>=3.1",
    "pyarrow>=12.0",

    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "networkx>=3.1",

    # Config
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "jupyter>=1.0",
    "ipykernel>=6.25",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
